6.CICD/4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: delivery
  # 경로를 새롭게 만들어준다
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
 # - host: <Host>
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-svc
            port: 
              number: 10000
